// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletHeader should render 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 border-b bg-theme-neutral-900 border-theme-neutral-900 dark:border-theme-neutral-800"
    >
      <div
        class="container flex items-center mx-auto px-14"
      >
        <div
          class="flex items-center w-1/2 pr-12 space-x-4 border-r h-13 border-theme-neutral-800"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="sc-AxhUy cjgpZM border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 frgnwW"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col overflow-hidden"
          >
            <div
              class="flex items-center space-x-5 text-theme-secondary-text"
            >
              <div
                class="flex items-center space-x-3"
              />
            </div>
            <div
              class="flex items-center space-x-5"
            >
              <span
                class="text-lg font-semibold text-white truncate"
              >
                abc
              </span>
              <div
                class="flex items-end mb-2 space-x-3 text-theme-secondary-text"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw bIhqqy hover:text-theme-neutral"
                    height="21"
                    width="13"
                  >
                    <svg>
                      copy-address.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw glFzMu hover:text-theme-neutral"
                    height="21"
                    width="17"
                  >
                    <svg>
                      copy-key.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center w-1/2 pl-12 space-x-2 h-13"
        >
          <div
            class="flex flex-col mr-auto"
          >
            <div
              class="flex items-center text-sm font-semibold text-theme-secondary-text"
            >
              <span>
                Balance:
              </span>
            </div>
            <span
              class="text-lg font-semibold text-white"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </div>
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm cGlMcw text-theme-secondary-text hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span
                class=""
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star-outline.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm colAFb my-auto"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            class="my-auto"
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm eRbxBA text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show currency delta (-5%) 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 border-b bg-theme-neutral-900 border-theme-neutral-900 dark:border-theme-neutral-800"
    >
      <div
        class="container flex items-center mx-auto px-14"
      >
        <div
          class="flex items-center w-1/2 pr-12 space-x-4 border-r h-13 border-theme-neutral-800"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="sc-AxhUy cjgpZM border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 frgnwW"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col overflow-hidden"
          >
            <div
              class="flex items-center space-x-5 text-theme-secondary-text"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  data-testid="WalletHeader__ledger"
                >
                  <div
                    class="sc-AxiKw bctdez hover:text-theme-neutral"
                    height="16"
                    width="16"
                  >
                    <svg>
                      ledger.svg
                    </svg>
                  </div>
                </span>
                <span
                  data-testid="WalletHeader__multisig"
                >
                  <div
                    class="sc-AxiKw dklFyP hover:text-theme-neutral"
                    height="20"
                    width="20"
                  >
                    <svg>
                      multisig.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex items-center space-x-5"
            >
              <span
                class="text-lg font-semibold text-white truncate"
              >
                abc
              </span>
              <div
                class="flex items-end mb-2 space-x-3 text-theme-secondary-text"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw bIhqqy hover:text-theme-neutral"
                    height="21"
                    width="13"
                  >
                    <svg>
                      copy-address.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw glFzMu hover:text-theme-neutral"
                    height="21"
                    width="17"
                  >
                    <svg>
                      copy-key.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center w-1/2 pl-12 space-x-2 h-13"
        >
          <div
            class="flex flex-col mr-auto"
          >
            <div
              class="flex items-center text-sm font-semibold text-theme-secondary-text"
            >
              <span>
                Balance:
              </span>
              <span
                class="inline-flex items-center ml-2 text-theme-danger"
              >
                <div
                  class="sc-AxiKw kZURHL rotate-180"
                  height="1em"
                  width="10"
                >
                  <svg>
                    chevron-up.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  -5%
                </span>
              </span>
            </div>
            <span
              class="text-lg font-semibold text-white"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </div>
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm cGlMcw text-theme-secondary-text hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm colAFb my-auto"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            class="my-auto"
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm eRbxBA text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show currency delta (5%) 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 border-b bg-theme-neutral-900 border-theme-neutral-900 dark:border-theme-neutral-800"
    >
      <div
        class="container flex items-center mx-auto px-14"
      >
        <div
          class="flex items-center w-1/2 pr-12 space-x-4 border-r h-13 border-theme-neutral-800"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="sc-AxhUy cjgpZM border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 frgnwW"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col overflow-hidden"
          >
            <div
              class="flex items-center space-x-5 text-theme-secondary-text"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  data-testid="WalletHeader__ledger"
                >
                  <div
                    class="sc-AxiKw bctdez hover:text-theme-neutral"
                    height="16"
                    width="16"
                  >
                    <svg>
                      ledger.svg
                    </svg>
                  </div>
                </span>
                <span
                  data-testid="WalletHeader__multisig"
                >
                  <div
                    class="sc-AxiKw dklFyP hover:text-theme-neutral"
                    height="20"
                    width="20"
                  >
                    <svg>
                      multisig.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex items-center space-x-5"
            >
              <span
                class="text-lg font-semibold text-white truncate"
              >
                abc
              </span>
              <div
                class="flex items-end mb-2 space-x-3 text-theme-secondary-text"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw bIhqqy hover:text-theme-neutral"
                    height="21"
                    width="13"
                  >
                    <svg>
                      copy-address.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw glFzMu hover:text-theme-neutral"
                    height="21"
                    width="17"
                  >
                    <svg>
                      copy-key.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center w-1/2 pl-12 space-x-2 h-13"
        >
          <div
            class="flex flex-col mr-auto"
          >
            <div
              class="flex items-center text-sm font-semibold text-theme-secondary-text"
            >
              <span>
                Balance:
              </span>
              <span
                class="inline-flex items-center ml-2 text-theme-success"
              >
                <div
                  class="sc-AxiKw kZURHL"
                  height="1em"
                  width="10"
                >
                  <svg>
                    chevron-up.svg
                  </svg>
                </div>
                <span
                  class="ml-1"
                >
                  5%
                </span>
              </span>
            </div>
            <span
              class="text-lg font-semibold text-white"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </div>
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm cGlMcw text-theme-secondary-text hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm colAFb my-auto"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            class="my-auto"
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm eRbxBA text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;

exports[`WalletHeader should show modifiers 1`] = `
<DocumentFragment>
  <header
    data-testid="WalletHeader"
  >
    <div
      class="py-8 border-b bg-theme-neutral-900 border-theme-neutral-900 dark:border-theme-neutral-800"
    >
      <div
        class="container flex items-center mx-auto px-14"
      >
        <div
          class="flex items-center w-1/2 pr-12 space-x-4 border-r h-13 border-theme-neutral-800"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="sc-AxhUy cjgpZM border-theme-neutral-light text-theme-neutral"
              data-testid="NetworkIcon__placeholder"
            />
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 frgnwW"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="abc"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(76, 175, 80)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(255, 193, 7)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"60\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/></svg>"
                  title="abc"
                />
              </div>
            </div>
          </div>
          <div
            class="flex flex-col overflow-hidden"
          >
            <div
              class="flex items-center space-x-5 text-theme-secondary-text"
            >
              <div
                class="flex items-center space-x-3"
              >
                <span
                  data-testid="WalletHeader__ledger"
                >
                  <div
                    class="sc-AxiKw bctdez hover:text-theme-neutral"
                    height="16"
                    width="16"
                  >
                    <svg>
                      ledger.svg
                    </svg>
                  </div>
                </span>
                <span
                  data-testid="WalletHeader__multisig"
                >
                  <div
                    class="sc-AxiKw dklFyP hover:text-theme-neutral"
                    height="20"
                    width="20"
                  >
                    <svg>
                      multisig.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex items-center space-x-5"
            >
              <span
                class="text-lg font-semibold text-white truncate"
              >
                abc
              </span>
              <div
                class="flex items-end mb-2 space-x-3 text-theme-secondary-text"
              >
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw bIhqqy hover:text-theme-neutral"
                    height="21"
                    width="13"
                  >
                    <svg>
                      copy-address.svg
                    </svg>
                  </div>
                </div>
                <div
                  class="inline-block cursor-pointer"
                  data-testid="clipboard__wrapper"
                >
                  <div
                    class="sc-AxiKw glFzMu hover:text-theme-neutral"
                    height="21"
                    width="17"
                  >
                    <svg>
                      copy-key.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex items-center w-1/2 pl-12 space-x-2 h-13"
        >
          <div
            class="flex flex-col mr-auto"
          >
            <div
              class="flex items-center text-sm font-semibold text-theme-secondary-text"
            >
              <span>
                Balance:
              </span>
            </div>
            <span
              class="text-lg font-semibold text-white"
              data-testid="WalletHeader__balance"
            >
              0 ARK
            </span>
          </div>
          <div
            class="my-auto"
          >
            <button
              class="sc-AxjAm cGlMcw text-theme-secondary-text hover:text-theme-neutral h-11 w-11"
              color="primary"
              data-testid="WalletHeader__star-button"
              type="button"
            >
              <span
                class="text-theme-warning-400"
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </span>
            </button>
          </div>
          <button
            class="sc-AxjAm colAFb my-auto"
            color="primary"
            data-testid="WalletHeader__send-button"
            type="button"
          >
            Send
          </button>
          <div
            class="my-auto"
            data-testid="WalletHeader__more-button"
          >
            <div
              class="relative"
              data-testid="dropdown__toggle"
            >
              <button
                class="sc-AxjAm eRbxBA text-left"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxiKw dklFyP"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
</DocumentFragment>
`;
